service.yaml
apiVersion: v1
kind: Service
metadata:
  name: factorio-server
  namespace: factorio-server
  labels:
    app: factorio-server
spec:
  type: ClusterIP
  ports:
    - name: factorio-udp
      port: 34197
      targetPort: 34197
      protocol: UDP 
    - name: factorio-tcp
      port: 27015
      targetPort: 27015
      protocol: TCP
  selector:
    app: factorio-server
